2005-01-24 Vladimir Hirsl
	Updated managed build scanner info collector to use new interfaces introduced
	for CDT 3.0.
	
2004-03-16 Tanya Wolff
	Marked remaining strings untranslatable as they belong to the extensibility schema.

2004-03-12 Sean Evoy
	Commit for Jeremiah Lott. 
	Allows the managed build system to resolve "forward references" within its 
	extensions. In practice this is necessary to allow references between 
	extensions in different plugins.

	Partial fix for bugzilla 54202:
	No longer use the cdtbuild file for persisting the default target and 
	configuration settings for a project. This is assumed to be an individual 
	workspace level setting so the choices are persisted in the project's 
	persistent settings store.

2004-03-09 Sean Evoy
	Fix for bugzilla 45311: "CVS tries to check in contents of build output"
	
	The managed make builder generates the output directories, and the makefiles 
	for those directories. Those files should be tagged as "derived" so that the
	CM system will ignore the files on check-in. Now, that is done when a new 
	build directory or file is added to the project. The workspace will take care 
	of files created by the build process through the Ignored Resources 
	extension point.

2004-03-08 Sean Evoy
	Committing the changes needed by our partners to better support a variety 
	of tool references. A class hierarchy of tool references has been introduced. 
	The base class is an abstract tool reference. Unqualified tool references, 
	like those used in the manifest or project files will be continue to be 
	treated as tool references. However, we now have some flexibility for the 
	future should a more refined type of tool reference be needed; for example, 
	a dynamic tool that reads a configuration file to determine what environment 
	it is targetting.

2004-03-05 Sean Evoy
	Fix for bug 53856: "Option reference not reporting built-in includes 
	paths to scanner"
	