@@ -10,6 +10,8 @@
  **********************************************************************/
 package org.eclipse.cdt.managedbuilder.projectconverter;
 
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -38,10 +40,13 @@ import org.eclipse.cdt.managedbuilder.core.ManagedBuilderCorePlugin;
 import org.eclipse.cdt.managedbuilder.internal.core.ManagedBuildInfo;
 import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IProject;
+import org.eclipse.core.resources.IWorkspace;
+import org.eclipse.core.resources.WorkspaceJob;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
+import org.eclipse.core.runtime.jobs.ISchedulingRule;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -372,12 +377,12 @@ class UpdateManagedProject12 {
 						configuration.setOption(tool, newOpt, bool.booleanValue());
 						break;
 					case IOption.STRING:
-						String strVal = (String) optRef.getAttribute(IOption.DEFAULT_VALUE);
+						String strVal = optRef.getAttribute(IOption.DEFAULT_VALUE);
 						configuration.setOption(tool, newOpt, strVal);
 						break;
 					case IOption.ENUMERATED:
 						// This is going to be the human readable form of the enumerated value
-						String name = (String) optRef.getAttribute(IOption.DEFAULT_VALUE);
+						String name = optRef.getAttribute(IOption.DEFAULT_VALUE);
 						// Convert it to the ID
 						String idValue = newOpt.getEnumeratedId(name);
 						configuration.setOption(tool, newOpt, idValue != null ? idValue : name);
@@ -665,9 +670,11 @@ class UpdateManagedProject12 {
 	 * @param project the <code>IProject</code> that needs to be upgraded
 	 * @throws CoreException if the update fails
 	 */
-	public static void doProjectUpdate(IProgressMonitor monitor, IProject project) throws CoreException {
+	public static void doProjectUpdate(IProgressMonitor monitor, final IProject project) throws CoreException {
 		String[] projectName = new String[]{project.getName()};
-		IFile settingsFile = project.getFile(ManagedBuildManager.SETTINGS_FILE_NAME);
+		IFile file = project.getFile(ManagedBuildManager.SETTINGS_FILE_NAME);
+		File settingsFile = file.getLocation().toFile();
+
 		if (!settingsFile.exists()) {
 			monitor.done();
 			return;
@@ -676,14 +683,14 @@ class UpdateManagedProject12 {
 		// Backup the file
 		monitor.beginTask(ConverterMessages.getFormattedString("UpdateManagedProject12.0", projectName), 1); //$NON-NLS-1$
 		IManagedBuildInfo info = ManagedBuildManager.getBuildInfo(project);
-		UpdateManagedProjectManager.backupFile(settingsFile, "_12backup", monitor, project); ;	//$NON-NLS-1$
+		UpdateManagedProjectManager.backupFile(file, "_12backup", monitor, project); ;	//$NON-NLS-1$
 
 		IManagedProject newProject = null;
 		
 		//Now convert each target to the new format
 		try {
 			// Load the old build file
-			InputStream stream = settingsFile.getContents();
+			InputStream stream = new FileInputStream(settingsFile);
 			DocumentBuilder parser = DocumentBuilderFactory.newInstance().newDocumentBuilder();
 			Document document = parser.parse(stream);
 			
@@ -735,7 +742,22 @@ class UpdateManagedProject12 {
 			throw new CoreException(new Status(IStatus.ERROR, ManagedBuilderCorePlugin.getUniqueIdentifier(), -1,
 					e.getMessage(), e));
 		} finally {
-			ManagedBuildManager.saveBuildInfo(project, false);
+			// If the tree is locked spawn a job to this.
+			IWorkspace workspace = project.getWorkspace();
+			boolean treeLock = workspace.isTreeLocked();
+			ISchedulingRule rule = workspace.getRuleFactory().createRule(project);
+			if (treeLock) {
+				WorkspaceJob job = new WorkspaceJob("Updating managed Project") {
+					public IStatus runInWorkspace(IProgressMonitor monitor) throws CoreException {
+						ManagedBuildManager.saveBuildInfo(project, false);
+						return Status.OK_STATUS;
+					}
+				};
+				job.setRule(rule);
+				job.schedule();
+			} else {
+				ManagedBuildManager.saveBuildInfo(project, false);
+			}
 			monitor.done();
 		}
 	}
